--- a/templates/ClientHome/BlogManagement/articles-list.html.twig
+++ b/templates/ClientHome/BlogManagement/articles-list.html.twig
@@ -1,78 +1,132 @@
 {% extends 'base.html.twig' %}
-{% block title %}Blog - ArtHub{% endblock %}
+{% block title %}Blog - ArtHub
+{% endblock %}
 
 {% block body %}
-    {% include 'ClientHome/header.html.twig' with {'page_title': 'Articles'} %}
+	{% include 'ClientHome/header.html.twig' with {'page_title': 'Articles'} %}
 
-    <section class="blog-one blog-standard-page">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            {% for article in pagination %}
-                                <div class="blog-one__single">
-                                    <div class="blog-one__image">
-                                        <img src="{{ asset(article.imagePath ? article.imagePath : 'images/blog/dafaultblog.jpg') }}" alt="">
-                                    </div>
-                                    <div class="blog-one__content">
-                                        <ul class="blog-one__meta list-unstyled">
-                                            <li><a href="#">By {{ article.utilisateur.pseudo }}</a></li>
-                                            <li><a href="#">Published: {{ article.dateCreation|date('Y/m/d') }}</a></li>
-                                        </ul>
-                                        <h3><a href="{{ path('article_details', {'articleId': article.articleId}) }}">{{ article.titre }}</a></h3>
-                                        <p>{{ article.contenu|slice(0, 150) }}</p>
-                                        <a href="{{ path('article_details', {'articleId': article.articleId}) }}" class="blog-one__link">Learn More</a>
-                                    </div>
-                                </div>
-                            {% endfor %}
+	<section class="blog-one blog-standard-page">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-8">
+					<div class="row">
+						<div class="col-lg-12">
+							{% for article in pagination %}
+								<div class="blog-one__single">
+									<div class="blog-one__image">
+										<img src="{{ asset(article.imagePath ? article.imagePath : 'images/blog/dafaultblog.jpg') }}" alt="">
+									</div>
+									<div class="blog-one__content">
+										<ul class="blog-one__meta list-unstyled">
+											<li>
+												<a href="#">By
+													{{ article.utilisateur.pseudo }}</a>
+											</li>
+											<li>
+												<a href="#">Published:
+													{{ article.dateCreation|date('Y/m/d') }}</a>
+											</li>
+										</ul>
+										<h3>
+											<a href="{{ path('article_details', {'articleId': article.articleId}) }}">{{ article.titre }}</a>
+										</h3>
+										<p>{{ article.contenu|slice(0, 150) }}</p>
+										<a href="{{ path('article_details', {'articleId': article.articleId}) }}" class="blog-one__link">Learn More</a>
+									</div>
+								</div>
+							{% endfor %}
+						</div>
+					</div>
+
+					{% if pagination.totalItemCount > pagination.getItemNumberPerPage() %}
+						<div class="post-pagination">
+							{% set currentPage = pagination.currentPageNumber %}
+							{% set lastPage = pagination.getPaginationData()['last'] %}
+
+							{% if currentPage > 1 %}
+								<a href="{{ path('app_articles', {'page': 1}) }}">&laquo;</a>
+								<a href="{{ path('app_articles', {'page': currentPage - 1}) }}">&lsaquo;</a>
+							{% endif %}
+
+							{% for page in 1..lastPage %}
+								<a href="{{ path('app_articles', {'page': page}) }}" class="{{ currentPage == page ? 'active' : '' }}">{{ page }}</a>
+							{% endfor %}
+
+							{% if currentPage < lastPage %}
+								<a href="{{ path('app_articles', {'page': currentPage + 1}) }}">&rsaquo;</a>
+								<a href="{{ path('app_articles', {'page': lastPage}) }}">&raquo;</a>
+							{% endif %}
+						</div>
+					{% endif %}
+				</div>
+
+				<div class="col-lg-4">
+					<div class="sidebar">
+						<div class="sidebar__single">
+							<h3 class="sidebar__title">Search</h3>
+							<!-- Updated form with JavaScript event listener -->
+							<form id="searchForm" class="sidebar__search">
+								<input type="text" id="searchInput" placeholder="Search for blogs" autocomplete="off">
+								<button type="submit">
+									<i class="muzex-icon-search"></i>
+								</button>
+							</form>
+						</div>
+						<div class="sidebar__single">
+							<h3 class="sidebar__title">Blogs</h3>
+							<p>You can explore everything you see here.</p>
+							<ul class="list-unstyled sidebar__cat-list">
+								<li>
+									<a href="{{path('app_articles')}}">All Blogs</a>
+								</li>
+								<li>
+									<a href="#">My Blogs</a>
+								</li>
+								<li>
+									<a href="{{ path('add_article') }}">Add Blog</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<script>
+document.addEventListener('DOMContentLoaded', function () {
+    const searchForm = document.getElementById('searchForm');
+    const searchInput = document.getElementById('searchInput');
+    const resultsContainer = document.querySelector('.row'); // Modify this selector based on where you want to display the results
+
+    searchForm.addEventListener('submit', function(event) {
+        event.preventDefault();
+        const query = searchInput.value;
+
+        fetch(`/search?query=${encodeURIComponent(query)}`, {
+            method: 'GET'
+        })
+        .then(response => response.json())
+        .then(articles => {
+            resultsContainer.innerHTML = ''; // Clear existing articles
+            articles.forEach(article => {
+                const articleHtml = `
+                    <div class="col-lg-12">
+                        <div class="blog-one__single">
+                            <div class="blog-one__image">
+                                <img src="${article.imagePath}" alt="Article Image">
+                            </div>
+                            <div class="blog-one__content">
+                                <h3><a href="/article/${article.id}">${article.titre}</a></h3>
+                                <p>${article.contenu}</p>
+                            </div>
                         </div>
-                    </div>
-
-                    {% if pagination.totalItemCount > pagination.getItemNumberPerPage() %}
-    <div class="post-pagination">
-        {% set currentPage = pagination.currentPageNumber %}
-        {% set lastPage = pagination.getPaginationData()['last'] %}
-
-        {% if currentPage > 1 %}
-            <a href="{{ path('app_articles', {'page': 1}) }}">&laquo;</a>
-            <a href="{{ path('app_articles', {'page': currentPage - 1}) }}">&lsaquo;</a>
-        {% endif %}
-
-        {% for page in 1..lastPage %}
-            <a href="{{ path('app_articles', {'page': page}) }}"
-               class="{{ currentPage == page ? 'active' : '' }}">{{ page }}</a>
-        {% endfor %}
-
-        {% if currentPage < lastPage %}
-            <a href="{{ path('app_articles', {'page': currentPage + 1}) }}">&rsaquo;</a>
-            <a href="{{ path('app_articles', {'page': lastPage}) }}">&raquo;</a>
-        {% endif %}
-    </div>
-{% endif %}
-                </div>
-
-                <div class="col-lg-4">
-                    <div class="sidebar">
-                        <div class="sidebar__single">
-                            <h3 class="sidebar__title">Search</h3>
-                            <form action="#" class="sidebar__search">
-                                <input type="text" placeholder="Search">
-                                <button type="submit"><i class="muzex-icon-search"></i></button>
-                            </form>
-                        </div>
-                        <div class="sidebar__single">
-                            <h3 class="sidebar__title">Blogs</h3>
-                            <p>You can explore everything you see here.</p>
-                            <ul class="list-unstyled sidebar__cat-list">
-                                <li><a href="{{path('app_articles')}}">All Blogs</a></li>
-                                <li><a href="#">My Blogs</a></li>
-                                <li><a href="{{ path('add_article') }}">Add Blog</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+                    </div>`;
+                resultsContainer.innerHTML += articleHtml;
+            });
+        })
+        .catch(error => console.error('Error fetching articles:', error));
+    });
+});
+</script>
 {% endblock %}
