--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -15,7 +15,7 @@
                     <label for="inputPassword">Password</label>
                     <input type="password" id="inputPassword" name="password" class="form-control" required>
                     <div class="text-left" style="margin-top: 10px;">
-                        <a href="">Forgot Password?</a>
+                        <a href="{{path('app_forgot_password')}}">Forgot Password?</a>
                     </div>
                     <div class="text-center" style="margin-top: 20px;">
                         <button type="submit" class="thm-btn donate-one__btn">Login</button>
