--- a/templates/ClientHome/UserManagement/forget_password.html.twig
+++ b/templates/ClientHome/UserManagement/forget_password.html.twig
@@ -3,8 +3,9 @@
 {% block title %}Forgot Password{% endblock %}
 
 {% block body %}
-<div style="margin-top: 100px; margin-bottom: 250px; text-align: center;">
-    <h3>Forgot Password</h3>
+<div style="margin-top: 100px; margin-bottom: 100px; text-align: center;">
+    <h3>Forgot Your Password?</h3>
+    <p>Don't worry, it happens! Just enter your email below, and we'll send you a reset code.</p>
     <form method="post" style="margin-top: 20px;">
         <input type="email" name="email" placeholder="Enter your email" required>
         <button type="submit">Send Reset Code</button>
