--- a/templates/ClientHome/index.html.twig
+++ b/templates/ClientHome/index.html.twig
@@ -61,7 +61,7 @@
 										<a href="{{ path('app_client_activity') }}">Activities</a>
 									</li>
 									<li>
-										<a href="{{ path('app_client_masterclass') }}">MasterClass</a>
+										<a href="{{ path('app_formations_index') }}">MasterClass</a>
 									</li>
 								</ul>
 								<button class="dropdown-btn">
