--- a/templates/ClientHome/header.html.twig
+++ b/templates/ClientHome/header.html.twig
@@ -81,7 +81,7 @@
 							</button>
 						</li>
 						<li>
-							<a href="{{ path('app_client_collection') }}">Collections</a>
+							<a href="{{ path('app_collection_client') }}">Collections</a>
 						</li>
 						<li class="dropdown current">
 							<a href="#">Explore</a>
