--- a/templates/baseAdmin.html.twig
+++ b/templates/baseAdmin.html.twig
@@ -24,6 +24,7 @@
     <!-- CSS Files -->
     <link id="pagestyle" href="{{asset('adminDash/css/argon-dashboard.css?v=2.0.4')}}" rel="stylesheet" />
     {% endblock %}
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body class="g-sidenav-show   bg-gray-100">
 <div class="min-height-300 bg-primary position-absolute w-100"></div>
@@ -39,7 +40,7 @@
     <div class="collapse navbar-collapse  w-auto " id="sidenav-collapse-main">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link {{ app.request.attributes.get('_route') == 'app_dashboard' ? 'active' : '' }}" href="{{ path('app_dashboard')}}">
+          <a class="nav-link {{ app.request.attributes.get('_route') == 'app_dashadmin' ? 'active' : '' }}" href="{{ path('app_dashadmin')}}">
             <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
               <i class="ni ni-tv-2 text-primary text-sm opacity-10"></i>
             </div>
@@ -75,7 +76,7 @@
             </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link " href="">
+            <a class="nav-link {{ app.request.attributes.get('_route') == 'app_users' ? 'active' : '' }}" href="{{ path('collections')}}">
                 <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                     <i class="ni ni-credit-card text-success text-sm opacity-10"></i>
                 </div>
