sayf ici integrated

--- a/templates/ClientHome/header.html.twig
+++ b/templates/ClientHome/header.html.twig
@@ -90,7 +90,7 @@
 									<a href="{{ path('app_client_event') }}">Events</a>
 								</li>
 								<li>
-									<a href="app_client_masterclass">MasterClass</a>
+									<a href="{{ path('app_formations_index') }}">MasterClass</a>
 								</li>
 								<li>
 									<a href="{{ path('app_client_activity') }}">Activities</a>
@@ -169,7 +169,7 @@
 									<a href="#">Events</a>
 								</li>
 								<li>
-									<a href="#">MasterClass</a>
+									<a href="{{ path('app_formations_index') }}">MasterClass</a>
 								</li>
 								<li>
 									<a href="#">Activities</a>
