--- a/templates/ClientHome/header.html.twig
+++ b/templates/ClientHome/header.html.twig
@@ -105,7 +105,7 @@
 							<a href="{{ path('app_articles') }}">Blog</a>
 						</li>
 						<li>
-							<a href="#">Contact</a>
+							<a href="{{ path('app_reclamation_index') }}">Contact</a>
 						</li>
 					</ul>
 					<!-- /.main-nav__navigation-box -->
@@ -184,7 +184,7 @@
 							<a href="{{ path('app_articles') }}">Blog</a>
 						</li>
 						<li>
-							<a href="#">Contact</a>
+							<a href="{{ path('app_reclamation_index') }}">Contact</a>
 						</li>
 					</ul>
 					<!-- /.main-nav__navigation-box -->
