--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,8 @@
 
 
 		<!-- Fonts URL -->
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"/>
+
 		<link
 		href="https://fonts.googleapis.com/css?family=Karla:400,700%7CPlayfair+Display:400,500,600,700,800,900%7CWork+Sans:300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 		<!-- Plugins CSS -->
