tabdila mtaa base wou musse kbar
little modifs

--- a/templates/ClientHome/index.html.twig
+++ b/templates/ClientHome/index.html.twig
@@ -155,12 +155,9 @@
 	<div class="container">
     <h1>Explore Our Virtual Museum</h1>
     <div class="virtual-museum-container">
-        <iframe class="virtual-museum" src="https://www.artsteps.com/embed/6626a875f4f66ff4c90264c4/560/315" frameborder="100" allowfullscreen></iframe>
+        <iframe class="virtual-museum" src="https://www.artsteps.com/embed/6626a875f4f66ff4c90264c4/560/315" frameborder="100" width=800px height= 400 allowfullscreen></iframe>
     </div>
 </div>
-
-
-
 
 
 	<section class="collection-two collection-two__home-three">
