--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,6 +23,7 @@
 		<link rel="stylesheet" href="{{ asset('clientHome/css/owl.theme.default.min.css') }}">
 		<link rel="stylesheet" href="{{ asset('clientHome/css/animate.css') }}">
 		<link rel="stylesheet" href="{{ asset('clientHome/css/hover-min.css') }}">
+		<link rel="stylesheet" href="{{ asset('clientHome/css/museum.css') }}">
 		<link
 		rel="stylesheet" href="{{ asset('clientHome/css/muzex-icons.css') }}">
 
