--- a/templates/evenements/eventlist.html.twig
+++ b/templates/evenements/eventlist.html.twig
@@ -41,7 +41,7 @@
             font-weight: bold;
             font-size: 1.3em;
             margin-left: 670px;
-            color: white;
+            color: black;
             margin-top: 0px;
             text-shadow: 0.1px 0.1px 0.1px rgba(0, 0, 0, 0.5);
         }
