--- a/templates/quiz/question.html.twig
+++ b/templates/quiz/question.html.twig
@@ -49,6 +49,20 @@
         text-align: center;
         text-decoration: none;
     }
+    .btn-primary {
+            background-color: #007bff; /* Bootstrap primary color */
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            border: none;
+            transition: background-color 0.3s ease;
+        }
+
+        .btn-primary:hover {
+            background-color: #0056b3; /* Darker shade for hover effect */
+            color: white;
+        }
 </style>
 {% endblock %}
 {% block body %}
