--- a/templates/quiz/result.html.twig
+++ b/templates/quiz/result.html.twig
@@ -42,6 +42,8 @@
     .btn-back {
         text-align: center;
     }
+    {% endblock %}
+
 {% block body %}
 <div class="container">
     <h1>Quiz Results</h1>
