--- a/public/css/gallery.css
+++ b/public/css/gallery.css
@@ -98,4 +98,72 @@
     color: #007bff; /* or any other color to indicate active state */
 }
 
-/* Optional: if you have the current sort state available in Twig, you can add a class 'sort-active' to the corresponding link */
+.side-ad-container {
+    position: fixed;
+    right: 10px;  /* Adjust based on layout */
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 10;  /* Ensure it's above other elements */
+    width: 12px;  /* Suitable size */
+    height: auto;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;  /* Stack images */
+}
+
+.ad-img {
+    flex: 0 0 100%;  /* Each takes full height of the container */
+    opacity: 0;  /* Start with hidden */
+    transition: opacity 0.5s ease-in-out;
+}
+
+.ad-img:first-child {
+    opacity: 1;  /* First image visible initially */
+}
+
+.bn30 {
+    border: 5em;
+    cursor: pointer;
+    outline: none;
+    font-size: 16px;
+    -webkit-transform: translate(0);
+    transform: translate(0);
+    background-image: linear-gradient(45deg, #4568dc, #b06ab3);
+    padding: 0.7em 2em;
+    border-radius: 65px;
+    box-shadow: 1px 1px 10px rgba(255, 255, 255, 0.438);
+    -webkit-transition: box-shadow 0.25s;
+    transition: box-shadow 0.25s;
+    color: white;
+  }
+  
+  .bn30 .text {
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-image: linear-gradient(45deg, #4568dc, #b06ab3);
+  }
+  
+  .bn30:after {
+    content: "";
+    border-radius: 18px;
+    position: absolute;
+    margin: 4px;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -1;
+    background: #0e0e10;
+  }
+  
+  .bn30:hover {
+    background-image: linear-gradient(-45deg, #4568dc, #b06ab3);
+    box-shadow: 0 12px 24px rgba(128, 128, 128, 0.1);
+  }
+  
+  .bn30:hover .text {
+    background-image: linear-gradient(-45deg, #4568dc, #b06ab3);
+  }
+
+  
