--- a/templates/ClientHome/index.html.twig
+++ b/templates/ClientHome/index.html.twig
@@ -1156,7 +1156,7 @@
 				<div class="col-lg-4">
 					<div class="team-one__single">
 						<div class="team-one__image">
-							<img src="{{asset('images/387344885_2434588626732788_7212528996158818019_n.jpg')}}" height="319" width="319" alt="">
+							<img src="{{asset('images/newmootaz.jpg')}}" height="auto"; width="auto" alt="">
 							<div class="team-one__social">
 								<a href="#" class="fab fa-facebook-f"></a>
 								<a href="#" class="fab fa-twitter"></a>
@@ -1167,7 +1167,7 @@
 						</div>
 						<!-- /.team-one__image -->
 						<div class="team-one__content">
-							<h3>Marguerite Holt</h3>
+							<h3>Mootaz Jebalia</h3>
 							<p>Developer</p>
 						</div>
 						<!-- /.team-one__content -->
@@ -1176,6 +1176,37 @@
 					<!-- /.team-one__single -->
 				</div>
 				<!-- /.col-lg-5 -->
+
+
+
+				<!-- /.col-lg-4 -->
+				<div class="col-lg-4">
+					<div class="team-one__single">
+						<div class="team-one__image">
+							<img src="{{asset('images/wajdata.jpg')}}" height="auto" width="auto" alt="">
+							<div class="team-one__social">
+								<a href="#" class="fab fa-twitter"></a>
+								<a href="#" class="fab fa-linkedin-in"></a>
+								<a href="#" class="fab fa-google-plus-g"></a>
+							</div>
+							<!-- /.team-one__social -->
+						</div>
+						<!-- /.team-one__image -->
+						<div class="team-one__content">
+							<h3>Wajdi Bouallegui</h3>
+							<p>Tech Lead</p>
+						</div>
+						<!-- /.team-one__content -->
+
+					</div>
+					<!-- /.team-one__single -->
+				</div>
+				<!-- /.col-lg-4 -->
+
+	<!-- /.col-lg-5 -->
+
+
+
 			</div>
 			<!-- /.row -->
 		</div>
